# career-growth-analytics-mvp

./: .gitignore  LICENSE  PHASE2_MODELING_REPORT.md  README.md  pyproject.toml
artifacts/: churn_model.joblib  explainability.json  feature_schema.json  logistic_coefficients.csv  metrics.json  model_metadata.json  nba_examples.csv  nba_examples.json  notebook_model_metadata.json  permutation_importance.csv  subgroup_metrics.csv  subgroup_metrics.json  user_explanations.json
data/processed/: labels.csv
data/sample/: events.csv  experiment_assignments.csv  interventions.csv  metadata.json  users.csv
docs/: data_schema.md  methodology.md  model_card.md
notebooks/: churn_modeling.ipynb  lifecycle_analysis.ipynb
scripts/: build_notebook.py  compute_summary.py  generate_data.py  run_analysis.py  train_churn_model.py
src/career_growth/: __init__.py  config.py  schemas.py
src/career_growth/analytics/: experiments.py  funnel.py  retention.py
src/career_growth/data_generation/: __init__.py  events.py  experiments.py  generator.py  interventions.py  users.py
src/career_growth/decisions/: __init__.py  next_best_action.py
src/career_growth/features/: __init__.py  labels.py  model_features.py
src/career_growth/modeling/: __init__.py  evaluate.py  explain.py  nba_integration.py  pipeline.py  split.py  subgroup.py  train.py
tests/: conftest.py  test_analytics.py  test_data_generation.py  test_decisions.py  test_features.py  test_model_features.py  test_modeling.py  test_nba_integration.py  test_train_script.py  test_validation.py
(+2 files in other folders)
